Wed Feb 25 23:18:53 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (ancillary_s_unix_rights): new method.

Wed Feb 25 23:01:26 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/unixsocket.c (unix_recv_io): prevent FD leak when 2 fd is
	  sent on LP64 platform.

	* ext/socket/rubysocket.h (rsock_discard_cmsg_resource): declared.

	* ext/socket/ancdata.c (rsock_discard_cmsg_resource): renamed from
	  discard_cmsg_resource.  export it.

Wed Feb 25 17:31:32 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (sysopen_func, rb_sysopen_internal, rb_sysopen): open file
	  by UTF-16'ed filename on Windows.

	* io.c (rb_file_open_generic, rb_io_s_sysopen, rb_io_reopen,
	  argf_next_argv): follow above change.

	* io.c (rb_scan_open_args): no longer need to convert filepath here on
	  Windows.

	* win32/wio32.c (rb_w32_wopen): new function to open file by UTF-16'ed
	  filename.

	* win32/win32.c (rb_w32_open): call rb_w32_open().

Wed Feb 25 15:05:35 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (config.status): use un.rb as cp instead of
	  cmd.exe's copy command.

	* lib/mkmf.rb (create_makefile): no longer need to convert path
	  separator when copying file.

Wed Feb 25 12:27:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_force_encoding): should clear coderange at changing
	  encoding.  [ruby-core:22437]

Wed Feb 25 12:06:09 2009    <nobu@ruby-lang.org>

	* io.c (rb_io_getline_1): enables limit even if rs is given.
	  [ruby-core:22434]

Wed Feb 25 02:28:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_chomp_bang): coderange may change.
	  [ruby-core:22414]

Wed Feb 25 02:17:30 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_delete_bang): should recalculate coderange.
	  [ruby-talk:329267]

Wed Feb 25 00:41:21 2009  Akinori MUSHA  <knu@iDaemons.org>

	* class.c (rb_scan_args): Allow specifying the number of trailing
	  mandatory arguments right after the number of optional arguments